<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/home_root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_less_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_background"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ru.ikbfu.rectorapp.ui.widgets.AvatarView
            android:id="@+id/user_less_photo"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_user_photo"
            android:src="@drawable/ic_person"
            app:civ_border_color="@color/colorPrimaryLight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_less_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/text_color_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_less_photo"
            app:layout_constraintEnd_toStartOf="@+id/exit_less_Btn"
            app:layout_constraintStart_toEndOf="@+id/user_less_photo"
            app:layout_constraintTop_toTopOf="@+id/user_less_photo"
            tools:text="АНДРЕЕВ ЕВГЕНИЙ" />

        <TextView
            android:id="@+id/exit_less_Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_light"
            android:text="@string/exit"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_less_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_less_name_tv" />

        <ImageView
            android:id="@+id/expandMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_expand_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_less_name_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_photo">

        <ImageView
            android:id="@+id/profile_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:src="@drawable/profile_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/text_color_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/division_tv"
            app:layout_constraintStart_toStartOf="@+id/division_tv"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="АНДРЕЕВ ЕВГЕНИЙ" />

        <TextView
            android:id="@+id/exitBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_light"
            android:text="@string/exit"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_name_tv"
            app:layout_constraintTop_toTopOf="@+id/user_name_tv" />

        <TextView
            android:id="@+id/division_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="52dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_tv"
            tools:text="Подразделение: проректорат по информатизации" />

        <TextView
            android:id="@+id/activity_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="52dp"

            android:fontFamily="@font/roboto_light"
            android:textColor="@color/gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/division_tv"
            tools:text="Должность: Главный проектировщик и дизайнер интерфейсов ПО" />

        <ImageView
            android:id="@+id/expandLess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_expand_less"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ru.ikbfu.rectorapp.ui.widgets.AvatarView
        android:id="@+id/user_photo"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_user_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stats_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_background"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier">

        <TextView
            android:id="@+id/stats_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/stats"
            android:textColor="@color/text_color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/stats_sum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/stats_sum"
            android:textColor="@color/text_color_black"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/seekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stats_tv" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="174dp"
            android:layout_height="26dp"
            app:layout_constraintTop_toTopOf="@id/stats_sum"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="false"
            android:progress="0"
            android:progressDrawable="@drawable/progress_drawable"
            android:splitTrack="false"
            android:thumbTint="@color/transparent" />

        <TextView
            android:id="@+id/seekBar_tv"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            app:layout_constraintStart_toStartOf="@+id/seekBar"
            app:layout_constraintTop_toTopOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="@+id/seekBar"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            android:gravity="center"
            android:text="0 из 0"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:text="1420 из 1500" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tree_recycler"
            android:nestedScrollingEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="user_info_container,user_less_info_container"
        tools:layout_editor_absoluteY="731dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>